IdeaProjects/ANTLR/gen/GoParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/Konstantin/IdeaProjects/ANTLR/Go.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class GoParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		TypeName=10, PrintLn=11, OpenParen=12, CloseParen=13, Minus=14, ComplexLitteral=15, 
		IntegerLiteral=16, StringLiteral=17, Point=18, FloatLitteral=19, Plus=20, 
		Multiply=21, Modulo=22, Bitwiseand=23, Palochka=24, LessThan=25, LessOrEqual=26, 
		Equals=27, GreaterOrEqual=28, GreaterThan=29, NotEquals=30, Id=31, Letter=32, 
		Digit=33, VosklichatelniyZnak=34, Prisvaivanie=35, Kovicka=36, Import=37, 
		I=38, Whitespace=39, NewLine=40;
	public const int
		RULE_file = 0, RULE_statement = 1, RULE_importStatement = 2, RULE_shortDeclarationStatement = 3, 
		RULE_returnStatement = 4, RULE_printlnStatement = 5, RULE_typeDeclaration = 6, 
		RULE_varDeclaration = 7, RULE_methodDeclaration = 8, RULE_primaryExpression = 9, 
		RULE_functionCall = 10, RULE_objectConstuctor = 11, RULE_keyWordParametr = 12, 
		RULE_structureMemberExpression = 13, RULE_unaryExpression = 14, RULE_multiplicativeExpression = 15, 
		RULE_additiveExpression = 16, RULE_comparisonExpression = 17, RULE_assighmentExpression = 18, 
		RULE_expression = 19;
	public static readonly string[] ruleNames = {
		"file", "statement", "importStatement", "shortDeclarationStatement", "returnStatement", 
		"printlnStatement", "typeDeclaration", "varDeclaration", "methodDeclaration", 
		"primaryExpression", "functionCall", "objectConstuctor", "keyWordParametr", 
		"structureMemberExpression", "unaryExpression", "multiplicativeExpression", 
		"additiveExpression", "comparisonExpression", "assighmentExpression", 
		"expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "':='", "'return'", "','", "'type'", "'struct'", "'{'", "'}'", "'func'", 
		"':'", null, "'fmt.Println'", "'('", "')'", "'-'", null, null, null, "'.'", 
		null, "'+'", "'*'", "'%'", "'&'", "'|'", "'<'", "'<='", "'=='", "'>='", 
		"'>'", "'!='", null, null, null, "'!'", "'='", "'\"'", "'import'", "'i'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, "TypeName", 
		"PrintLn", "OpenParen", "CloseParen", "Minus", "ComplexLitteral", "IntegerLiteral", 
		"StringLiteral", "Point", "FloatLitteral", "Plus", "Multiply", "Modulo", 
		"Bitwiseand", "Palochka", "LessThan", "LessOrEqual", "Equals", "GreaterOrEqual", 
		"GreaterThan", "NotEquals", "Id", "Letter", "Digit", "VosklichatelniyZnak", 
		"Prisvaivanie", "Kovicka", "Import", "I", "Whitespace", "NewLine"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Go.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GoParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GoParser.Eof, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 40; statement();
					}
					} 
				}
				State = 45;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 47;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__7) | (1L << PrintLn) | (1L << OpenParen) | (1L << ComplexLitteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << FloatLitteral) | (1L << Multiply) | (1L << Id) | (1L << VosklichatelniyZnak) | (1L << Import))) != 0)) {
				{
				State = 46; statement();
				}
			}

			State = 49; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PrintlnStatementContext printlnStatement() {
			return GetRuleContext<PrintlnStatementContext>(0);
		}
		public TypeDeclarationContext typeDeclaration() {
			return GetRuleContext<TypeDeclarationContext>(0);
		}
		public MethodDeclarationContext methodDeclaration() {
			return GetRuleContext<MethodDeclarationContext>(0);
		}
		public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public ShortDeclarationStatementContext shortDeclarationStatement() {
			return GetRuleContext<ShortDeclarationStatementContext>(0);
		}
		public ImportStatementContext importStatement() {
			return GetRuleContext<ImportStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 51; expression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 52; printlnStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 53; typeDeclaration();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 54; methodDeclaration();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 55; returnStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 56; shortDeclarationStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 57; importStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportStatementContext : ParserRuleContext {
		public ITerminalNode StringLiteral() { return GetToken(GoParser.StringLiteral, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterImportStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitImportStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImportStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ImportStatementContext importStatement() {
		ImportStatementContext _localctx = new ImportStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_importStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60; Match(Import);
			State = 61; Match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShortDeclarationStatementContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(GoParser.Id, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ShortDeclarationStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shortDeclarationStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterShortDeclarationStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitShortDeclarationStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShortDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShortDeclarationStatementContext shortDeclarationStatement() {
		ShortDeclarationStatementContext _localctx = new ShortDeclarationStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_shortDeclarationStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63; Match(Id);
			State = 64; Match(T__0);
			State = 65; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnStatementContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterReturnStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitReturnStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnStatementContext returnStatement() {
		ReturnStatementContext _localctx = new ReturnStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_returnStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; Match(T__1);
			State = 68; expression();
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__2) {
				{
				{
				State = 69; Match(T__2);
				State = 70; expression();
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintlnStatementContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public PrintlnStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_printlnStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterPrintlnStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitPrintlnStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintlnStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintlnStatementContext printlnStatement() {
		PrintlnStatementContext _localctx = new PrintlnStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_printlnStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(PrintLn);
			State = 77; Match(OpenParen);
			State = 86;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenParen) | (1L << ComplexLitteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << FloatLitteral) | (1L << Multiply) | (1L << Id) | (1L << VosklichatelniyZnak))) != 0)) {
				{
				State = 78; expression();
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==T__2) {
					{
					{
					State = 79; Match(T__2);
					State = 80; expression();
					}
					}
					State = 85;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
			}

			State = 88; Match(CloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclarationContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(GoParser.Id, 0); }
		public VarDeclarationContext[] varDeclaration() {
			return GetRuleContexts<VarDeclarationContext>();
		}
		public VarDeclarationContext varDeclaration(int i) {
			return GetRuleContext<VarDeclarationContext>(i);
		}
		public MethodDeclarationContext[] methodDeclaration() {
			return GetRuleContexts<MethodDeclarationContext>();
		}
		public MethodDeclarationContext methodDeclaration(int i) {
			return GetRuleContext<MethodDeclarationContext>(i);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterTypeDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitTypeDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclarationContext typeDeclaration() {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(Context, State);
		EnterRule(_localctx, 12, RULE_typeDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90; Match(T__3);
			State = 91; Match(Id);
			State = 92; Match(T__4);
			State = 93; Match(T__5);
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__7 || _la==Id) {
				{
				State = 96;
				switch (TokenStream.La(1)) {
				case Id:
					{
					State = 94; varDeclaration();
					}
					break;
				case T__7:
					{
					State = 95; methodDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 101; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarDeclarationContext : ParserRuleContext {
		public ITerminalNode[] Id() { return GetTokens(GoParser.Id); }
		public ITerminalNode Id(int i) {
			return GetToken(GoParser.Id, i);
		}
		public ITerminalNode TypeName() { return GetToken(GoParser.TypeName, 0); }
		public VarDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterVarDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitVarDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarDeclarationContext varDeclaration() {
		VarDeclarationContext _localctx = new VarDeclarationContext(Context, State);
		EnterRule(_localctx, 14, RULE_varDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(Id);
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__2) {
				{
				{
				State = 104; Match(T__2);
				State = 105; Match(Id);
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 111; Match(TypeName);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDeclarationContext : ParserRuleContext {
		public ITerminalNode[] Id() { return GetTokens(GoParser.Id); }
		public ITerminalNode Id(int i) {
			return GetToken(GoParser.Id, i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ITerminalNode[] TypeName() { return GetTokens(GoParser.TypeName); }
		public ITerminalNode TypeName(int i) {
			return GetToken(GoParser.TypeName, i);
		}
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterMethodDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitMethodDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDeclarationContext methodDeclaration() {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(Context, State);
		EnterRule(_localctx, 16, RULE_methodDeclaration);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(T__7);
			State = 128;
			_la = TokenStream.La(1);
			if (_la==OpenParen) {
				{
				State = 114; Match(OpenParen);
				State = 125;
				_la = TokenStream.La(1);
				if (_la==Id) {
					{
					State = 115; Match(Id);
					State = 116; Match(TypeName);
					State = 122;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
					while (_la==T__2) {
						{
						{
						State = 117; Match(T__2);
						State = 118; Match(Id);
						State = 119; Match(TypeName);
						}
						}
						State = 124;
						ErrorHandler.Sync(this);
						_la = TokenStream.La(1);
					}
					}
				}

				State = 127; Match(CloseParen);
				}
			}

			State = 130; Match(Id);
			State = 131; Match(OpenParen);
			State = 132; Match(CloseParen);
			State = 133; Match(T__5);
			State = 137;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 134; statement();
					}
					} 
				}
				State = 139;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			}
			State = 141;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__7) | (1L << PrintLn) | (1L << OpenParen) | (1L << ComplexLitteral) | (1L << IntegerLiteral) | (1L << StringLiteral) | (1L << FloatLitteral) | (1L << Multiply) | (1L << Id) | (1L << VosklichatelniyZnak) | (1L << Import))) != 0)) {
				{
				State = 140; statement();
				}
			}

			State = 143; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryExpressionContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(GoParser.Id, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode ComplexLitteral() { return GetToken(GoParser.ComplexLitteral, 0); }
		public ITerminalNode IntegerLiteral() { return GetToken(GoParser.IntegerLiteral, 0); }
		public ITerminalNode FloatLitteral() { return GetToken(GoParser.FloatLitteral, 0); }
		public ITerminalNode StringLiteral() { return GetToken(GoParser.StringLiteral, 0); }
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public ObjectConstuctorContext objectConstuctor() {
			return GetRuleContext<ObjectConstuctorContext>(0);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primaryExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.EnterPrimaryExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGoListener typedListener = listener as IGoListener;
			if (typedListener != null) typedListener.ExitPrimaryExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoVisitor<TResult> typedVisitor = visitor as IGoVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryExpressionContext primaryExpression() {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(Context, State);
		EnterRule(_localctx, 18, RULE_primaryExpression);
		try {
			State = 156;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 145; Match(Id);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 146; Match(OpenParen);
				State = 147; expression();
				State = 148; Match(CloseParen);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 150; Match(ComplexLitteral);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 151; Match(IntegerLiteral);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 152; Match(FloatLitteral);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 153; Match(StringLiteral);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 154; functionCall();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 155; objectConstuctor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
